[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://IBMPlexMono-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Panel" parent="."]
margin_left = -4.0
margin_top = -4.0
margin_right = 1658.0
margin_bottom = 1086.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn_01" type="Position2D" parent="."]
position = Vector2( 373, -26 )

[node name="Spawn_02" type="Position2D" parent="."]
position = Vector2( 819, -30 )

[node name="Spawn_03" type="Position2D" parent="."]
position = Vector2( 1247, -30 )

[node name="Word_Handler" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_Box" type="Label" parent="Control"]
margin_left = 700.0
margin_top = 406.0
margin_right = 1019.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 1 )
text = "placeholder"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
